--- a/vd_s1_tp2_Cantarovici_Reyes/dataviz_4/styles.css
+++ b/vd_s1_tp2_Cantarovici_Reyes/dataviz_4/styles.css
@@ -4,7 +4,6 @@
     margin-top: 40px;
     font-size: 20px;
     font-weight: bold;
-    font-family : "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #060606;
     text-align: center;
     margin: 0px;
@@ -14,14 +13,20 @@
 .title{
     /* font-size: 20px; */
     font-weight: bold;
-    font-family : "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #d9d9d9;
-    text-align: center;     
+    font-family : "Helvetica Neue",
+        Helvetica,
+        Arial,
+        sans-serif;
+    color: #060606;
+    text-align: center;    
 }
 .nombres{
     font-size: 16px;
-    font-family : "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #9f9f9f;
+    font-family : "Helvetica Neue",
+        Helvetica,
+        Arial,
+        sans-serif;
+    color: #6d6d6d;
 }
 
 
@@ -30,6 +35,5 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #060606;
 
 }
