--- a/vd_s1_tp2_Cantarovici_Reyes/dataviz_3_dark/styles.css
+++ b/vd_s1_tp2_Cantarovici_Reyes/dataviz_3_dark/styles.css
@@ -1,10 +1,14 @@
-
+@font-face {
+    font-family: 'Supreme';
+    src: url('./fonts/Supreme-Regular.otf');
+    
+  }
 
 .text{
     margin-top: 40px;
     font-size: 20px;
     font-weight: bold;
-    font-family : "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family : "Supreme";
     text-align: center;
     margin: 0px;
     padding: 0px;
@@ -13,13 +17,13 @@
 .title{
     /* font-size: 20px; */
     font-weight: bold;
-    font-family : "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family : "Supreme";
     color: #d9d9d9;
     text-align: center;     
 }
 .nombres{
     font-size: 16px;
-    font-family : "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family : "Supreme";
     color: #9f9f9f;
 }
 
