--- a/vd_s1_tp2_Cantarovici_Reyes/dataviz_4_dark/styles.css
+++ b/vd_s1_tp2_Cantarovici_Reyes/dataviz_4_dark/styles.css
@@ -1,8 +1,8 @@
 /* import custom font */
 @font-face {
-    font-family: "nippo";
-    src: url("/Users/nico/Desktop/Ditella/Año 3/Semestre 1/Visualizacion/Visualizacion_Cantarovici_Reyes/vd_s1_tp2_Cantarovici_Reyes/fonts/Satoshi-Regular.otf") format("otf");
-}
+    font-family: 'Supreme';
+    src: url('./fonts/Supreme-Regular.otf');
+  }
 
 .text{
     margin-top: 40px;
@@ -17,7 +17,7 @@
 .title{
     /* font-size: 20px; */
     font-weight: bold;
-    font-family : "Helvetica Neue",
+    font-family : "Supreme",
         Helvetica,
         Arial,
         sans-serif;
@@ -26,7 +26,7 @@
 }
 .nombres{
     font-size: 16px;
-    font-family : "Helvetica Neue",
+    font-family : "Supreme",
         Helvetica,
         Arial,
         sans-serif;
