--- a/vd_s1_tp2_Cantarovici_Reyes/styles.css
+++ b/vd_s1_tp2_Cantarovici_Reyes/styles.css
@@ -1,3 +1,17 @@
+/* import a font localy*/
+@font-face {
+  font-family: 'Supreme';
+  src: url('./fonts/Supreme-Regular.otf');
+  
+}
+
+/* put all the boxing font to all the html */
+* {
+  font-family: 'Supreme';
+}
+
+
+
 body {
     background-color: black;
     color: white;
@@ -5,7 +19,7 @@ body {
     text-align: center;
     overflow: hidden;
   }
-  
+/*   
   #stars {
     width: 1px;
     height: 1px;
@@ -36,15 +50,15 @@ body {
     background-position: 0 0, 25px 25px;
     background-size: 50px 50px;
     pointer-events: none;
-  }
-  
+  } */
+
+
   h1 {
     font-size: 3rem;
-    margin-top: 2rem;
   }
   
   nav {
-    margin-top: 3rem;
+    margin-top: 2rem;
   }
   
   nav ul {
@@ -55,31 +69,32 @@ body {
     flex-wrap: wrap;
     margin: 0;
     padding: 0;
+
   }
   
   nav li {
-    margin: 1rem;
+    margin-bottom: 2.5rem;
   }
   
   nav a {
     text-decoration: none;
     color: black;
-    font-size: 2rem;
-    padding: 1rem;
+    background-color: white;
+    font-size: 1.5rem; /* Adjust the font size */
+    padding: 0.5rem 1rem; /* Adjust the padding */
     border: 2px solid white;
     border-radius: 1rem;
     transition: all 0.3s ease-in-out;
-    background-color: white;
   }
   
   nav a:hover {
-    background-color: transparent;
+    background-color: black;
     color: white;
   }
   
   h3 {
     margin-top: 3rem;
-    color: lightgray;
+    color: rgb(171, 171, 171);
   }
   
   .container {
@@ -90,3 +105,23 @@ body {
     height: 100vh;
   }
   
+  .by h3 {
+    display: inline-block;
+  }
+  
+  .nombres:hover {
+    color: white;
+    font-size: 1.2rem;
+  }
+  
+  .icon {
+    width: 150px;
+    height: 150px;
+  }
+
+  .links_left{
+    margin-right: 10px;
+  }
+  .links_right{
+    margin-left: 10px;
+  }
