--- a/vd_s1_tp2_Cantarovici_Reyes/dataviz_1_dark/styles.css
+++ b/vd_s1_tp2_Cantarovici_Reyes/dataviz_1_dark/styles.css
@@ -10,20 +10,28 @@
     font-weight: bold;
     font-family : "Supreme";
     color: #060606;
-    text-align: center;
-    margin: 0px;
-    padding: 0px;
+    text-align: left;
 }
 
 .title{
-    /* font-size: 20px; */
+    font-size: 32px;
     font-weight: bold;
     font-family : "Supreme";
     color: #d9d9d9;
-    text-align: center;     
+    text-align: left;     
+}
+
+.subtitle{
+    font-size: 18px;
+    font-weight: regular;
+    font-family : "Supreme";
+    color: #c4c2c2;
+    text-align: left;
+    margin-top: -10px;
+    margin-bottom: 40px;
 }
 .nombres{
-    font-size: 16px;
+    font-size: 18px;
     font-family : "Supreme";
     color: #9f9f9f;
 }
@@ -36,4 +44,27 @@ body{
     justify-content: center;
     background-color: #060606;
 
+}
+
+a{
+    position:absolute;
+    top: 50px;
+    left: 50px;
+    height: 25px;
+    width: 25px;
+}
+img{
+    width: 100%;
+    height:100%;
+    margin: 0px;
+    padding: 0px;
+}
+
+footer {
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: 18px;
+    font-family : "Supreme";
+    color: #9f9f9f;
 }
