--- a/vd_s1_tp2_Cantarovici_Reyes/dataviz_2_dark/styles.css
+++ b/vd_s1_tp2_Cantarovici_Reyes/dataviz_2_dark/styles.css
@@ -9,20 +9,29 @@
     font-size: 20px;
     font-weight: bold;
     font-family : "Supreme";
-    text-align: center;
-    margin: 0px;
+    text-align: left;
+    margin-left: 40px;
     padding: 0px;
 }
 
 .title{
-    /* font-size: 20px; */
+    font-size: 32px;
     font-weight: bold;
     font-family : "Supreme";
     color: #d9d9d9;
-    text-align: center;     
+    text-align: left;     
+}
+
+.subtitle{
+    font-size: 18px;
+    font-weight: regular;
+    font-family : "Supreme";
+    color: #c4c2c2;
+    text-align: left;
+    margin-top: -10px;
 }
 .nombres{
-    font-size: 16px;
+    font-size: 18px;
     font-family : "Supreme";
     color: #9f9f9f;
 }
@@ -36,3 +45,33 @@ body{
     background-color: #060606;
 
 }
+
+a{
+    position:absolute;
+    top: 50px;
+    left: 50px;
+    height: 25px;
+    width: 25px;
+}
+img{
+    width: 100%;
+    height:100%;
+    margin: 0px;
+    padding: 0px;
+}
+
+footer {
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: 18px;
+    font-family : "Supreme";
+    color: #9f9f9f;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
+
+
+
+
