--- a/vd_s1_tp2_Cantarovici_Reyes/dataviz_4_dark/styles.css
+++ b/vd_s1_tp2_Cantarovici_Reyes/dataviz_4_dark/styles.css
@@ -4,28 +4,34 @@
     src: url('./fonts/Supreme-Regular.otf');
   }
 
-.text{
+  .text{
     margin-top: 40px;
     font-size: 20px;
     font-weight: bold;
-    color: #060606;
-    text-align: center;
-    margin: 0px;
+    font-family : "Supreme";
+    text-align: left;
+    margin-left: 40px;
     padding: 0px;
 }
 
 .title{
-    /* font-size: 20px; */
+    font-size: 32px;
     font-weight: bold;
-    font-family : "Supreme",
-        Helvetica,
-        Arial,
-        sans-serif;
+    font-family : "Supreme";
     color: #d9d9d9;
-    text-align: center;    
+    text-align: left;     
+}
+
+.subtitle{
+    font-size: 18px;
+    font-weight: regular;
+    font-family : "Supreme";
+    color: #c4c2c2;
+    text-align: left;
+    margin-top: -10px;
 }
 .nombres{
-    font-size: 16px;
+    font-size: 18px;
     font-family : "Supreme",
         Helvetica,
         Arial,
@@ -41,4 +47,67 @@ body{
     justify-content: center;
     background-color: #060606;
 
+}
+
+p{
+    color: white;
+    font-family: Supreme;
+    font-size: 18px;
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #060606;
+    width: 100%;
+    height: 100%;
+}
+
+#myDIV{
+    display: flex;
+    flex-direction: column;
+    background-color: #060606;
+    width: 60%;
+    height: 60%;
+}
+
+button{
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
+    font-size: 0.9rem;
+    /* Adjust the font size */
+    padding: 0.5rem 1rem;
+    /* Adjust the padding */
+    border:1.5px solid rgb(255, 254, 254);
+    border-radius: 0.5rem;
+    margin-bottom: 10px;
+
+    
+}
+
+a{
+    position:absolute;
+    top: 50px;
+    left: 50px;
+    height: 25px;
+    width: 25px;
+}
+img{
+    width: 100%;
+    height:100%;
+    margin: 0px;
+    padding: 0px;
+}
+footer {
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: 18px;
+    font-family : "Supreme";
+    color: #9f9f9f;
+    margin-right: 90px;
+    margin-left: 40px;
 }
