--- a/vd_s1_tp2_Cantarovici_Reyes/styles.css
+++ b/vd_s1_tp2_Cantarovici_Reyes/styles.css
@@ -1,58 +1,26 @@
-/* import a font localy*/
 @font-face {
-  font-family: 'Supreme';
-  src: url('./fonts/Supreme-Regular.otf');
+    font-family: 'Supreme';
+    src: url('./fonts/Supreme-Regular.otf');
+  }
   
-}
-
-/* put all the boxing font to all the html */
-* {
-  font-family: 'Supreme';
-}
-
-
-
-body {
+  /* put all the boxing font to all the html */
+  * {
+    font-family: 'Supreme';
+  }
+  
+  body {
+    background-image: url("./assets/space.gif");
+    background-size: cover;
     background-color: black;
     color: white;
     font-family: sans-serif;
     text-align: center;
     overflow: hidden;
-  }
-/*   
-  #stars {
-    width: 1px;
-    height: 1px;
-    background-color: transparent;
-    position: absolute;
-    top: 0;
-    left: 0;
-    animation: animateStars 50s linear infinite;
+    /* user-select: none; */
   }
   
-  @keyframes animateStars {
-    0% {
-      transform: translateY(0);
-    }
-    100% {
-      transform: translateY(1000px);
-    }
-  }
   
-  .stars {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: radial-gradient(white 1px, transparent 0),
-      radial-gradient(white 1px, transparent 0);
-    background-position: 0 0, 25px 25px;
-    background-size: 50px 50px;
-    pointer-events: none;
-  } */
-
-
+  
   h1 {
     font-size: 3rem;
   }
@@ -69,7 +37,6 @@ body {
     flex-wrap: wrap;
     margin: 0;
     padding: 0;
-
   }
   
   nav li {
@@ -80,8 +47,10 @@ body {
     text-decoration: none;
     color: black;
     background-color: white;
-    font-size: 1.5rem; /* Adjust the font size */
-    padding: 0.5rem 1rem; /* Adjust the padding */
+    font-size: 1.5rem;
+    /* Adjust the font size */
+    padding: 0.5rem 1rem;
+    /* Adjust the padding */
     border: 2px solid white;
     border-radius: 1rem;
     transition: all 0.3s ease-in-out;
@@ -118,10 +87,17 @@ body {
     width: 150px;
     height: 150px;
   }
-
-  .links_left{
+  
+  .links_left {
     margin-right: 10px;
   }
-  .links_right{
+  
+  .links_right {
     margin-left: 10px;
   }
+
+  .astronaut-icon {
+    background-color: black;
+    border-radius: 60%;
+  }
+  
