--- a/vd_s1_tp2_Cantarovici_Reyes/dataviz_3_dark/styles.css
+++ b/vd_s1_tp2_Cantarovici_Reyes/dataviz_3_dark/styles.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Supreme';
-    src: url('./fonts/Supreme-Regular.otf');
+    src: url('../fonts/Supreme-Regular.otf');
     
   }
 
