--- a/vd_s1_tp2_Cantarovici_Reyes/dataviz_4_dark/styles.css
+++ b/vd_s1_tp2_Cantarovici_Reyes/dataviz_4_dark/styles.css
@@ -1,7 +1,7 @@
 /* import custom font */
 @font-face {
     font-family: 'Supreme';
-    src: url('./fonts/Supreme-Regular.otf');
+    src: url('../fonts/Supreme-Regular.otf');
   }
 
   .text{
