--- a/vd_s1_tp2_Cantarovici_Reyes/styles.css
+++ b/vd_s1_tp2_Cantarovici_Reyes/styles.css
@@ -16,7 +16,7 @@
     font-family: sans-serif;
     text-align: center;
     overflow: hidden;
-    /* user-select: none; */
+    user-select: none;
   }
   
   
