--- a/vd_s1_tp2_Cantarovici_Reyes/dataviz_3_dark/styles.css
+++ b/vd_s1_tp2_Cantarovici_Reyes/dataviz_3_dark/styles.css
@@ -69,3 +69,39 @@ footer {
     color: #9f9f9f;
     margin-right: 50px;
 }
+
+@media (max-width: 600px) {
+
+    a.back-button {
+        display: none;
+      }
+    /* Hide chart overflow for small screens */
+    #chart {
+      overflow-y: hidden;
+    }
+    
+    /* Adjust font sizes for small screens */
+    .text {
+      font-size: 16px;
+    }
+    .title {
+      font-size: 24px;
+    }
+    .subtitle {
+      font-size: 14px;
+    }
+    .nombres {
+      font-size: 14px;
+    }
+    
+    /* Adjust position of footer links for small screens */
+    footer {
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+    footer a {
+      position: static;
+      margin-bottom: 10px;
+    }
+  }
