--- a/vd_s1_tp2_Cantarovici_Reyes/styles.css
+++ b/vd_s1_tp2_Cantarovici_Reyes/styles.css
@@ -101,3 +101,43 @@
     border-radius: 60%;
   }
   
+  @media (max-width: 600px) {
+    body {
+      font-size: 16px;
+    }
+  
+    h1 {
+      font-size: 2rem;
+    }
+  
+    nav ul {
+      flex-direction: column;
+    }
+  
+    nav li {
+      margin-bottom: 1rem;
+    }
+  
+    .links_left {
+      margin-bottom: 1rem;
+      margin-left: 0px;
+      margin-right: 0px;
+    }
+  
+    .links_right {
+      margin-bottom: 1rem;
+      margin-left: 0px;
+      margin-right: 0px;
+    }
+  
+    .icon {
+      width: 100px;
+      height: 100px;
+    }
+    .one{
+      margin-bottom: 30px;
+    }
+    .three{
+      margin-bottom: 30px;
+    }
+  }
