--- a/vd_s1_tp2_Cantarovici_Reyes/dataviz_2_dark/styles.css
+++ b/vd_s1_tp2_Cantarovici_Reyes/dataviz_2_dark/styles.css
@@ -13,6 +13,9 @@
     margin-left: 40px;
     padding: 0px;
 }
+#chart{
+    margin-top: -20px;
+}
 
 .title{
     font-size: 32px;
@@ -28,7 +31,7 @@
     font-family : "Supreme";
     color: #c4c2c2;
     text-align: left;
-    margin-top: -10px;
+    margin-top: -20px;
 }
 .nombres{
     font-size: 18px;
