--- a/vd_s1_tp2_Cantarovici_Reyes/dataviz_4_dark/styles.css
+++ b/vd_s1_tp2_Cantarovici_Reyes/dataviz_4_dark/styles.css
@@ -55,6 +55,10 @@ p{
     font-size: 18px;
 }
 
+#chart {
+  margin-top: -20px;
+}
+
 .container{
     display: flex;
     flex-direction: column;
@@ -63,29 +67,6 @@ p{
     background-color: #060606;
     width: 100%;
     height: 100%;
-}
-
-#myDIV{
-    display: flex;
-    flex-direction: column;
-    background-color: #060606;
-    width: 60%;
-    height: 60%;
-}
-
-button{
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-    background-color: rgb(0, 0, 0);
-    font-size: 0.9rem;
-    /* Adjust the font size */
-    padding: 0.5rem 1rem;
-    /* Adjust the padding */
-    border:1.5px solid rgb(255, 254, 254);
-    border-radius: 0.5rem;
-    margin-bottom: 10px;
-
-    
 }
 
 a{
