--- a/vd_s1_tp2_Cantarovici_Reyes/dataviz_1_dark/styles.css
+++ b/vd_s1_tp2_Cantarovici_Reyes/dataviz_1_dark/styles.css
@@ -30,7 +30,7 @@
     font-family : "Supreme";
     color: #c4c2c2;
     text-align: left;
-    margin-top: -10px;
+    margin-top: -20px;
     margin-bottom: 40px;
 }
 .nombres{
@@ -49,7 +49,7 @@ body{
 
 }
 
-a{
+.back-button{
     position:absolute;
     top: 50px;
     left: 50px;
@@ -70,6 +70,21 @@ footer {
     font-size: 18px;
     font-family : "Supreme";
     color: #9f9f9f;
+}
+
+h4 {
+  margin-top: 3rem;
+  color: rgb(171, 171, 171);
+}
+
+
+.by h4 {
+  display: inline-block;
+}
+
+.fuente:hover {
+  color: white;
+  font-size: 1.1rem;
 }
 
 @media (max-width: 600px) {
