--- a/vd_s1_tp2_Cantarovici_Reyes/dataviz_1_dark/styles.css
+++ b/vd_s1_tp2_Cantarovici_Reyes/dataviz_1_dark/styles.css
@@ -12,9 +12,6 @@
     color: #060606;
     text-align: left;
 }
-#chart {
-  margin-top: -20px;
-}
 
 .title{
     font-size: 32px;
@@ -25,13 +22,12 @@
 }
 
 .subtitle{
-    font-size: 18px;
-    font-weight: regular;
-    font-family : "Supreme";
-    color: #c4c2c2;
-    text-align: left;
-    margin-top: -20px;
-    margin-bottom: 40px;
+  font-size: 18px;
+  font-weight: regular;
+  font-family : "Supreme";
+  color: #c4c2c2;
+  text-align: left;
+  margin-top: -20px;
 }
 .nombres{
     font-size: 18px;
@@ -78,15 +74,6 @@ h4 {
 }
 
 
-.by h4 {
-  display: inline-block;
-}
-
-.fuente:hover {
-  color: white;
-  font-size: 1.1rem;
-}
-
 @media (max-width: 600px) {
 
     a.back-button {
@@ -108,6 +95,9 @@ h4 {
       font-size: 14px;
     }
     .nombres {
+      font-size: 14px;
+    }
+    .source{
       font-size: 14px;
     }
     
